compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__block_in_tail_position_is_not_an_iife.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 221
expression: "\npub fn b() {\n  let x = 1\n  {\n    Nil\n    x + 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn b() {
  let x = 1
  {
    Nil
    x + 1
  }
}


----- COMPILED JAVASCRIPT
export function b() {
  let x = 1;
  {
    undefined;
    return x + 1;
  }
}
