compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__block_in_tail_position_shadowing_variables.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 236
expression: "\npub fn b() {\n  let x = 1\n  {\n    let x = 2\n    x + 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn b() {
  let x = 1
  {
    let x = 2
    x + 1
  }
}


----- COMPILED JAVASCRIPT
export function b() {
  let x = 1;
  {
    let x$1 = 2;
    return x$1 + 1;
  }
}
