compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__block_in_tail_position_with_just_an_assignment.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 251
expression: "\npub fn b() {\n  let x = 1\n  {\n    let x = x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn b() {
  let x = 1
  {
    let x = x
  }
}


----- COMPILED JAVASCRIPT
export function b() {
  let x = 1;
  return x;
}
