compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__block_with_parenthesised_expression_returning_from_function.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 208
expression: "\npub fn b() {\n  {\n    1 + 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn b() {
  {
    1 + 2
  }
}


----- COMPILED JAVASCRIPT
export function b() {
  return 1 + 2;
}
