compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__blocks_returning_functions.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 172
expression: "\npub fn b() {\n  {\n    fn(cb) { cb(1) }\n  }\n  {\n    fn(cb) { cb(2) }\n  }\n  3\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn b() {
  {
    fn(cb) { cb(1) }
  }
  {
    fn(cb) { cb(2) }
  }
  3
}


----- COMPILED JAVASCRIPT
export function b() {
  (cb) => { return cb(1); };
  (cb) => { return cb(2); };
  return 3;
}
