compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__blocks_whose_values_are_unused_do_not_generate_assignments.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 352
expression: "\npub fn main() {\n  {\n    let x = 10\n    echo x\n  }\n\n  {\n    let a = 1\n    let b = 2\n    a + b\n  }\n\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  {
    let x = 10
    echo x
  }

  {
    let a = 1
    let b = 2
    a + b
  }

  Nil
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function main() {
  {
    let x = 10;
    echo(x, undefined, "src/module.gleam", 5)
  };
  {
    let a = 1;
    let b = 2;
    a + b
  };
  return undefined;
}

// ...omitted code from `templates/echo.mjs`...
