compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__left_operator_sequence.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 127
expression: "\npub fn go() {\n  1 == {\n    1\n    2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  1 == {
    1
    2
  }
}


----- COMPILED JAVASCRIPT
export function go() {
  return 1 === (() => {
    1;
    return 2;
  })();
}
