compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__blocks__let_assert_message_no_lifted.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/blocks.rs
assertion_line: 330
expression: "\nfn side_effects(x) {\n  // Some side effects\n  x\n}\n\npub fn main() {\n  let assert Error(Nil) = side_effects(Ok(10))\n    as {\n    let message = side_effects(\"some message\")\n    message\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn side_effects(x) {
  // Some side effects
  x
}

pub fn main() {
  let assert Error(Nil) = side_effects(Ok(10))
    as {
    let message = side_effects("some message")
    message
  }
}


----- COMPILED JAVASCRIPT
import { Ok, Error, makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

function side_effects(x) {
  return x;
}

export function main() {
  let $ = side_effects(new Ok(10));
  if (!($ instanceof Error)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      8,
      "main",
      (() => {
        let message = side_effects("some message");
        return message;
      })(),
      { value: $, start: 70, end: 114, pattern_start: 81, pattern_end: 91 }
    )
  }
  return $;
}
